# simbi

./: .clang-format  .gitignore  .gitmodules  CITATION.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  README.rst  a.out  add_header_all.sh  build_options.hpp.in  cleanup.sh  dev.py  enhanced-readme.md  gpu_check.cpp  hydro.py  install.sh  main.cpp  meson.build  meson_options.txt  new_readme.md  old_meson.build  pyproject.toml  setup.cfg  setup.py  sod.py  units.hpp  units.tpp
gpu/: meson.build
lib/: CMakeLists.txt  README.md  build_options.hpp.in  meson.build  meson_options.txt  pyproject.toml  setup.cfg.in  setup.py.in
lib/pysimbi/: __init__.py  initial_condition.py  simbi.py
lib/pysimbi/core/: __init__.py  simbi.py
lib/pysimbi/gpu/: __init__.py  simbi.py
lib/src/: build_options.hpp  call_obj.pyx  device_api.cpp  dual.hpp  dual.tpp  gpu_ext.pyx  hydro_classes.pxd  parallel_for.hpp
lib/src/common/: clattice1D.cpp  clattice1D.hpp  clattice2D.cpp  clattice2D.hpp  clattice3D.cpp  clattice3D.hpp  config.hpp  enums.hpp  helpers.cpp  helpers.hpp  helpers.tpp  hydro_structs.cpp  hydro_structs.hpp  traits.hpp  viscous_diff.hpp
lib/src/cpu/: euler1D.cpp  euler1D.hpp  euler2D.cpp  euler2D.hpp  srhydro1D.cpp  srhydro1D.hpp  srhydro2D.cpp  srhydro2D.hpp  state.cpp  state.pyx
lib/src/gpu/: euler1D.cpp  euler1D.hpp  euler2D.cpp  euler2D.hpp  gpu_error_check.h  gpu_state.pyx  helpers.hip.cpp  helpers.hip.hpp  helpers.hip.tpp  hydro_classes.pxd  srhydro1D.hip.cpp  srhydro1D.hip.hpp  srhydro1D.hip.tpp  srhydro2D.hip.cpp  srhydro2D.hip.hpp  srhydro3D.hip.cpp  srhydro3D.hip.hpp
lib/src/hydro/: ag_state.cpp  ag_state.pyx  cpu_ext.pyx  cpu_state.pyx  euler1D.cpp  euler1D.hpp  euler2D.cpp  euler2D.hpp  gpu_ext.pyx  gpu_state.pyx  helpers.hip.cpp  helpers.hip.hpp  helpers.hip.tpp  hydro_classes.pxd  srhydro1D.hip.cpp  srhydro1D.hip.hpp  srhydro2D.hip.cpp  srhydro2D.hip.hpp  srhydro3D.hip.cpp  srhydro3D.hip.hpp
lib/src/kernels/: srhydro1D.hpp
lib/src/util/: device_api.cpp  device_api.h  device_api.hpp  dual.hpp  dual.tpp  exec_policy.hpp  familiar.h  gpu_error_check.h  kernel.hpp  loup_error.h  parallel_for.hpp  printb.cpp  printb.hpp  printb.tpp  pyobj_wrapper.hpp  range.hpp  shapeshift.h
simbi/afterglow/: helpers.py  meson.build  radiation.py  scales.py
simbi/afterglow/cython_deprecated/: rad_hydro.pxd  rad_hydro.pyx
simbi/afterglow/pybind11/: binding.cpp
simbi/afterglow/src/: rad_hydro.pxd  rad_hydro.pyx  rad_units.cpp  rad_units.hpp
src/: call_obj.pyx  classical_1d.h  classical_2d.h  clattice.cpp  clattice.h  clattice_1d.cpp  clattice_1d.hpp  config.hpp  cpu_ext.pyx  gpu_ext.pyx  helper_functions.cpp  helper_functions.h  helper_functions.tpp  helpers.tpp  hydro_classes.pxd  hydro_structs.cpp  hydro_structs.h  meson.build  relativistic1D.cpp  relativistic2D.cpp  relativistic2D.tpp  simbi_1d.cpp  simbi_2d.cpp  srhd_1d.h  srhd_2d.h  state.cpp  state.pyx  traits.h  ustate.h  viscous_diff.cpp
src/adapter/: cpu_backend.hpp  cuda_backend.hpp  device_adapter_api.cpp  device_adapter_api.hpp  device_backend.hpp  device_types.hpp  hip_backend.hpp
src/base/: concepts.hpp  stencil.hpp  stencil_view.hpp
src/bindings/: config_converter.cpp  config_converter.hpp  dispatch.hpp  driver.cpp  driver.hpp  evolver.cpp  evolver.hpp  gpu_binding.cpp
src/bindings/pybind11/: cold_dispatch.cpp  cold_dispatch.hpp  dispatch.hpp  driver.cpp  driver.hpp  old_disp.cpp  old_dispatch.hpp  pch.hpp  (+2 more)
src/common/: clattice1D.cpp  clattice1D.hpp  clattice2D.cpp  clattice3D.cpp  enums.hpp  exceptions.cpp  exceptions.hpp  generic_structs.hpp  helpers.cpp  helpers.hip.cpp  helpers.hip.hpp  helpers.hip.tpp  helpers.hpp  helpers.ipp  helpers.tpp  hydro_structs.hpp  mesh.hpp  old_mesh.hpp  traits.hpp
src/compute/: cfd.hpp  context.hpp  field.hpp
src/containers/: ctx.hpp  decompose.hpp  ndarray.hpp  state_ops.hpp  state_struct.hpp  vector.hpp
src/core/: base.hpp  traits.hpp
src/deprecated/: array_view.hpp  hydro_structs.hpp  ndarray.hpp  old_mesh.hpp  old_ndarray.hpp  old_ndarray.ipp
src/domain/: algebra.hpp  domain.hpp  ghost.hpp
src/execution/: completion.hpp  executor.hpp  executor_traits.hpp  future.hpp  thread_pool.hpp  tiling.hpp
src/functional/: fp.hpp
src/geometry/: mesh.hpp  vector_calculus.hpp
src/hydro/: base.hpp  driver.cpp  driver.hpp  driver.ipp  driver.tpp  euler1D.cpp  euler1D.hpp  euler2D.cpp  euler2D.hpp  helpers.hip.cpp  helpers.hip.hpp  newt.cpp  newt.hpp  newt.ipp  newt.ixx  newt.tpp  newtonian.hpp  newtonian.tpp  rmhd.cpp  rmhd.hpp  rmhd.ipp  rmhd.ixx  rmhd.tpp  srhd.cpp  srhd.hpp  srhd.ipp  srhd.tpp  srhydro1D.hip.cpp  srhydro1D.hip.hpp  srhydro1D_gb.hip.cpp  srhydro2D.hip.cpp  srhydro2D.hip.hpp  srhydro2D_gb.hip.cpp  srhydro3D.hip.cpp  srhydro3D.hip.hpp  srhydro3D_gb.hip.cpp  state.cpp  state.hpp
src/io/: exceptions.cpp  exceptions.hpp
src/libs/: neutron_star.hydro.cpp
src/math/: cfd.hpp  domain.hpp  evaluator.cpp  evaluator.hpp  exp_load.cpp  exp_load.hpp  expression.hpp  linearize.cpp  linearizer.hpp
src/memory/: accessor.hpp  arena.hpp  buffer_pool.hpp  device.hpp  managed.hpp  memory.hpp  span.hpp  unified.hpp
src/mesh/: mesh_config.hpp  mesh_ops.hpp
src/numerics/: solver_base.hpp
src/physics/: bcs.hpp  update.hpp
src/state/: cfd_ops.hpp  express_t.hpp  hydro_state.hpp  hydro_state_types.hpp
src/system/: execution.hpp
src/traits/: traits.hpp
src/types/: alias.hpp
src/update/: adaptive_timestep.hpp  bcs.hpp  flux.hpp  prim_recovery.hpp  rk.hpp
src/util/: device_api.cpp  device_api.hpp  dual.hpp  dual.tpp  exec_policy.hpp  functional.hpp  idx_sequence.hpp  jit_module.cpp  jit_module.hpp  kernel.hpp  launch.hpp  launch.tpp  logger.hpp  managed.hpp  maybe.hpp  ndarray.hpp  ndarray.ipp  ndarray.tpp  old_ndarray.hpp  old_ndarray.ipp  parallel_for.hpp  printb.hpp  printb.ipp  printb.tpp  progress.hpp  pyobj_wrapper.hpp  range.hpp  smrt_ptr.hpp  tabulate.hpp  thread_pool.hpp  timer.hpp  vector.hpp
src/utility/: atomic_bool.hpp  bimap.hpp  config_dict.hpp  config_dict_visitor.hpp  enums.hpp  helpers.cpp  helpers.hpp  init_conditions.hpp
(+935 files in other folders)
