option(
    'gpu_compilation',
    type: 'feature',
    value: 'disabled'
)

option(
    'float_precision',
    type: 'boolean', 
    value: false
)

option(
    'column_major',
    type: 'boolean', 
    value: false
)
option(
    'profile',
    type: 'combo', 
    choices: ['default', 'develop'],
    value: 'default'
)

option(
    'gpu_arch',
    type: 'integer',
    value: 70,
)

option(
    'gpu_include_dir',
    type: 'string',
    value: '/opt/cuda/include',
)

option(
    'hdf5_include_dir',
    type: 'string',
    value: '/usr/include/hdf5/serial',
)

option(
    'four_velocity',
    type: 'boolean',
    value: false
)

option(
    'progress_bar',
    type: 'boolean',
    value: true
)