option(
    'gpu_compilation',
    type: 'feature',
    value: 'disabled'
)

option(
    'precision',
    type: 'combo', 
    choices: ['single', 'double'],
    value: 'double',
)

option(
    'column_major',
    type: 'boolean', 
    value: false
)
option(
    'profile',
    type: 'combo', 
    choices: ['default', 'develop'],
    value: 'default'
)

option(
    'gpu_arch',
    type: 'integer',
    value: 70,
)

option(
    'four_velocity',
    type: 'boolean',
    value: false
)

option(
    'progress_bar',
    type: 'boolean',
    value: true
)

option(
    'shared_memory',
    type: 'boolean',
    value: true
)