option(
    'gpu_compilation',
    type: 'feature',
    value: 'disabled'
)

option(
    'precision',
    type: 'combo',
    choices: ['single', 'double'],
    value: 'double',
)

option(
    'column_major',
    type: 'boolean',
    value: false
)
option(
    'profile',
    type: 'combo',
    choices: ['default', 'develop'],
    value: 'default'
)

option(
    'gpu_arch',
    type: 'string',
    value: '-gencode=arch=70,compute=sm_70 -gencode=arch=75,compute=sm_70 -gencode=arch=80,compute=sm_80 -gencode=arch=86,compute=sm_86',
)
option(
    'hdf5_inc',
    type: 'string',
    value: '/usr/include/hdf5/serial'
)

option(
    'four_velocity',
    type: 'boolean',
    value: false
)

option(
    'progress_bar',
    type: 'boolean',
    value: true
)

option(
    'shared_memory',
    type: 'boolean',
    value: true
)
