[build-system]
requires = ["setuptools", "wheel", "setuptools-scm", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "simbi"
authors = [
    {name = "Marcus DuPont"},
    {email = "md4469@nyu.edu"}
]
description = "Python module to solve hydrodynamic equations using a hip/cuda/c++ backend"
requires-python = ">=3"
keywords = ["physics", "relativity"]
license = {file = 'LICENSE'}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: HIP",
    "Programming Language :: CUDA",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["version", "readme"]
dependencies = [
    "numpy", 
    "h5py", 
    "cython", 
    "meson",
    "mypy",
]

[project.scripts]
simbi = "simbi.__main__:main"

[options]
zip_safe = false

[tool.setuptools]
packages = ["simbi"]

[tool.setuptools_scm]
write_to = "simbi/version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
simbi = ["configs/*.py"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.mypy]
ignore_missing_imports = true
# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

# Getting these passing should be easy
strict_equality = true
strict_concatenate = true

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = true

# This one can be tricky to get passing if you use a lot of untyped libraries
warn_return_any = true


[project.urls]
repository    = "https://github.com/EigenDev/simbi"
documentation = "https://github.com/EigenDev/simbi"
