[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simbi"
authors = [
    {name = "Marcus DuPont"},
    {email = "marcus.dupont@princeton.edu"}
]
description = "Python module to solve hydrodynamic equations using a hip/cuda/c++ backend"
requires-python = ">=3.10"
keywords = ["physics", "relativity"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: HIP",
    "Programming Language :: CUDA",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["version", "readme"]
dependencies = [
    "numpy",
    "h5py",
    "pybind11",
    "meson",
    "mypy",
    "matplotlib",
    "astropy",
    "halo",
    "rich",
    "pydantic",
]

[project.optional-dependencies]
visual = ["cmasher"]
cli = ["rich-argparse"]

[project.scripts]
simbi = "simbi.cli.__main__:main"

[tool.setuptools]
packages = ["simbi"]

[tool.setuptools_scm]
write_to = "simbi/version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
simbi = ["gitrepo_home.txt", "mypy.ini", "tools/*.py", "libs/*.so"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true
disable_error_code = ["prop-decorator"]


[project.urls]
repository    = "https://github.com/EigenDev/simbi"
documentation = "https://github.com/EigenDev/simbi"
