# [metadata]
# name             = simbi
# version          = 0.8.0
# author           = Marcus DuPont
# author_email     = md4469@nyu.edu
# url              = https://github.com/eigendev/simbi
# description      = Special Relativistic Hydrodyanmics Code
# long_description = file: README.md
# long_description_content_type = text/markdown
# keywords                      = physics, hydrodynamics, relativity
# license                       = BSD 3-Clause License
# classifiers                   =
#         Programming Language :: Python :: 3,
#         Programming Language :: C++,
#         Programming Language :: HIP,
#         Programming Language :: CUDA,
#         License :: OSI Approved :: MIT License,
#         Operating System :: OS Independent,
#         Development Status :: 4 - Beta,
#         Intended Audience :: Science/Research,
#         Topic :: Scientific/Engineering :: Astronomy

# [build_ext]
# inplace=1

# [options]
# packages = find:
# zip_safe = False
# include_package_data = True
# install_requires =
#     numpy
#     scipy
#     cython