[build-system]
requires = ["setuptools", "wheel", "numpy", "cython", "meson"],
build-backend = "setuptools.build_meta"

[project]
name = "simbi"
description = "Python module to solve hydrodynamic equations using a hip/cuda/c++ backend"
readme = "README.md"
requires-python = ">=3"
keywords = ["one", "two"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: HIP",
    "Programming Language :: CUDA",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["version"]