[build-system]
requires = ["setuptools", "wheel", "numpy", "h5py", "cython", "meson"]
build-backend = "setuptools.build_meta"

[project]
name = "simbi"
description = "Python module to solve hydrodynamic equations using a hip/cuda/c++ backend"
requires-python = ">=3"
keywords = ["physics", "relativity"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: HIP",
    "Programming Language :: CUDA",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["version", "readme"]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[tool.setuptools.dynamic]
version = {attr = "pysimbi.version"}
readme = {file = ["README.md"]}

[project.urls]
repository = "https://github.com/EigenDev/simbi"
documentation = "https://github.com/EigenDev/simbi"
